Bug 1779771 - Use thread local ScreenReferenceDrawTarget for CanvasPath::Constructor. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D151944